TreeViewCol: Don’t try to disconnect null treeview

https://bugzilla.gnome.org/show_bug.cgi?id=788614